done name, email, and password

--- a/index.html
+++ b/index.html
@@ -47,4 +47,17 @@
       </div>
 </body>
 <script src="./validator.js"></script>
+
+<!-- Mong muốn -->
+<script>
+      Validator({
+            form:'#form-1',
+            errorSelector: '.form-message',
+            rules:[
+                  Validator.isRequired('#fullname'),
+                  Validator.isEmail('#email'),
+                  Validator.minLength('#password')
+            ]
+      })
+</script>
 </html>
