--- a/index.html
+++ b/index.html
@@ -55,8 +55,13 @@
             errorSelector: '.form-message',
             rules:[
                   Validator.isRequired('#fullname'),
-                  Validator.isEmail('#email'),
-                  Validator.minLength('#password')
+                  Validator.isRequired('#email'),
+                  Validator.isEmail('#email', 'Trường này phải là Email'),
+                  Validator.minLength('#password'),
+                  Validator.isRequired('#password_confirmation'),
+                  Validator.isConfirmed('#password_confirmation', () => {
+                        return document.querySelector('#form-1 #password').value
+                  }, 'Mật khẩu không khớp, vui lòng nhập lại')
             ]
       })
 </script>
