--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
                   Validator.isConfirmed('#password_confirmation', () => {
                         return document.querySelector('#form-1 #password').value
                   }, 'Mật khẩu không khớp, vui lòng nhập lại')
-            ]
+            ],
+            onSubmit : (data) => {
+                  console.log(data);
+            }
       })
 </script>
 </html>
